2009-01-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/rf-common.f (rfrangen): drop unused 'seed' argument
	(rfrdraw): ditto

	* src/rffastmcd.f: get rid of TABs (gfortran -Wall  complains)

	* man/exAM.Rd, man/possumDiv.Rd, ...: Rd_parse fixes

2008-11-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/OGK.R (covOGK): also return n.iter and weight.fn.
	* man/covOGK.Rd: note about the "silly" weight.fn

2008-10-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (lmrob.S): fix error message s/larger/smaller/
	thanks to Keith Ponting.

2008-10-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/wgt_himed_templ.h: fix leading comment

2008-08-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.4-3  for CRAN release

	* tests/mc-strict.R: define 'isMac' and tweak the tests;
	thanks to reports from Rory Winston.

2008-08-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: import stats::cov {since others hide it!}

2008-08-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/huber.R (huberM): replace `s' by 's' in errors and warnings.
	* R/qnsn.R, R/plot.lmrob.R, R/ltsReg.R, R/ltsPlot.R: ditto

2008-08-04  Martin Maechler  <maechler@stat.math.ethz.ch>, really from

	    Valentin Todorov  <valentin.todorov@chello.at>

	* R/ltsReg.R (ltReg.default): if(mcd) call covMcd() with correct alpha

	* R/covMcd.R (covMcd): drop (n-1)/n correction, as cov.wt()
	contains that per default (in R, not in S-plus!).

	* R/tolEllipse.R (tolEllipsePlot): no text() for id.n == 0

	* DESCRIPTION (Version): 0.4-2 released to CRAN.

2008-08-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/wgt_himed.c: renamed  wgt_himed.c_templ  to
	* wgt_himed_templ.h:

2008-08-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.4-1 ready for release to CRAN.

	* R/ltsReg.R (ltsReg.default): don't add artificial "Y" y-name

	* src/lmrob.c (rwls): first call to sum_rho() is only needed for