@@ -1,6 +1,6 @@
 Package: robustbase
-Version: 0.4-4
-Date: 2009-01-09
+Version: 0.4-5
+Date: 2009-01-17
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
@@ -23,4 +23,4 @@ Suggests: MASS
 LazyLoad: yes
 LazyData: yes
 License: GPL (>= 2)
-Packaged: Sat Jan 10 22:33:17 2009; maechler
+Packaged: Sat Jan 17 20:51:53 2009; maechler
