@@ -1,6 +1,6 @@
 
-R version 2.8.0 Patched (2008-11-27 r47025)
-Copyright (C) 2008 The R Foundation for Statistical Computing
+R version 2.8.1 Patched (2009-01-16 r47630)
+Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -636,7 +636,7 @@ Water.Temp   7.5735     6.3162     5.3676
 Acid.Conc.  16.1029     5.3676    32.3897
 
 $msg
-[1] "97 singular samples of size 4 out of 2000"
+[1] "90 singular samples of size 4 out of 2000"
 
 $crit
 [1] 5.4726
@@ -694,7 +694,7 @@ X2  0.88241  3.35968 -1.2622
 X3 -2.79160 -1.26222  2.0924
 
 $msg
-[1] "3 singular samples of size 4 out of 2000"
+[1] "4 singular samples of size 4 out of 2000"
 
 $crit
 [1] 1.3264
@@ -753,7 +753,7 @@ X2 0.022175 1.138972 0.18149
 X3 0.153729 0.181492 1.04346
 
 $msg
-[1] "0 singular samples of size 4 out of 2000"
+[1] "1 singular samples of size 4 out of 2000"
 
 $crit
 [1] -1.0479
@@ -824,7 +824,7 @@ X7 1.9107e-01
 X8 1.0417e-01
 
 $msg
-[1] "25 singular samples of size 9 out of 3000"
+[1] "40 singular samples of size 9 out of 3000"
 
 $crit
 [1] -28.932
@@ -839,20 +839,20 @@ $n.obs
 --------------------------------------------------------
             bushfire  38   5  22    18.135810 
 Best subsample: 
- [1]  1  2  3  4  5  6 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
+ [1]  1  2  3  4  5  6 14 15 16 17 18 19 20 21 22 23 24 25 26 27
 Outliers:  0 
 -------------
 $center
     V1     V2     V3     V4     V5 
-109.44 149.56 260.32 215.12 276.88 
+109.38 148.23 250.96 212.38 274.50 
 
 $cov
-         V1      V2       V3      V4      V5
-V1   376.67  280.03 -1628.02 -342.01 -285.07
-V2   280.03  236.42  -987.14 -188.82 -162.89
-V3 -1628.02 -987.14 10203.64 2369.63 1917.58
-V4  -342.01 -188.82  2369.63  589.94  468.56
-V5  -285.07 -162.89  1917.58  468.56  375.19
+         V1       V2       V3       V4      V5
+V1   361.69  270.748 -1549.42 -324.394 -270.24
+V2   270.75  272.905  -624.23  -86.732  -74.12
+V3 -1549.42 -624.231 12072.60 2940.415 2419.98
+V4  -324.39  -86.732  2940.42  760.886  619.08
+V5  -270.24  -74.120  2419.98  619.080  507.46
 
 $msg
 [1] "0 singular samples of size 6 out of 3000"
@@ -861,7 +861,7 @@ $crit
 [1] 18.136
 
 $best
- [1]  1  2  3  4  5  6 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
+ [1]  1  2  3  4  5  6 14 15 16 17 18 19 20 21 22 23 24 25 26 27
 
 $n.obs
 [1] 38
@@ -902,7 +902,29 @@ Error in solve.default(cov, ...) :
   system is computationally singular: reciprocal condition number = 4.85293e-11
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  1.908 1.172 3.166 0 0 
+Time elapsed:  4.496 0.056 4.753 0 0 
+> 
+> ## A "large" example {that seg.faulted in version 0.4-4}:
+> set.seed(1)
+> n <- 1000; X <- matrix(round(100*rnorm(n * 3)), n, 3)
+> cX <- covMcd(X)
+> cX
+Minimum Covariance Determinant (MCD) estimator.
+Call:
+covMcd(x = X)
+-> Method:  Minimum Covariance Determinant Estimator. 
+
+Log(Det.):  25.1 
+Robust Estimate of Location:
+[1]  -2.2967   0.0873   3.2423
+Robust Estimate of Covariance:
+       [,1]   [,2]   [,3]
+[1,]  10869   -443    760
+[2,]   -443  10610    274
+[3,]    760    274  10812
+> cat('Time elapsed: ', proc.time(),'\n')
+Time elapsed:  4.664 0.06 4.947 0 0 
+> 
 > 
 > ## Now, some small sample cases:
 > 
@@ -1061,7 +1083,7 @@ In covMcd(X, use.correction = FALSE) :
 +           all.equal(c(mcc$cov / cc$raw.cov), rep(0.7528695976179, p*p)))
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  1.993 1.23 3.311 0 0 
+Time elapsed:  4.744 0.068 5.056 0 0 
 > 
 > ## nsamp = "exact" -- here for p=7
 > coleman.x <- data.matrix(coleman[, 1:6])
@@ -1071,7 +1093,7 @@ Warning in .fastmcd(x, h, nsamp, trace = as.integer(trace)) :
  This may take a very long time!
 
    user  system elapsed 
-  1.308   0.003   1.316 
+  3.368   0.012   3.544 
 > stopifnot(all.equal(CcX$best,
 +                     c(2, 5:9, 11,13, 14:16, 19:20), tol=0))
 > 
